# pantheon

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.codex/: config.toml
pantheon/: __init__.py  adapters.py  cli.py  db.py  runner.py  structured_output.py  tui.py
pantheon/tui/: __init__.py  app.py  pantheon.tcss
pantheon/tui/screens/: __init__.py  agents.py  goal_submit.py  goals.py  group_selector.py  inspection.py  overview.py  runs.py  settings.py  tasks.py
spec/: ADAPTERS.md  CLI_TUI.md  PANTHEON_DOCTRINE.md  PANTHEON_V1_BRIEF.md  RUNNER.md  SCHEMA.md
spec/plans/: 2026-04-15-pantheon-phase-0-contract-and-group-slice.md  2026-04-15-pantheon-v0-textual-tui.md
tests/: test_adapters.py  test_cli.py  test_db.py  test_tui.py
